docs/0.14/_sources/api/gammapy.modeling.models.ExpCutoffPowerLawSpectralModel.rst.txt
ExpCutoffPowerLawSpectralModel
==============================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpCutoffPowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpCutoffPowerLawSpectralModel.amplitude
      ~ExpCutoffPowerLawSpectralModel.e_peak
      ~ExpCutoffPowerLawSpectralModel.index
      ~ExpCutoffPowerLawSpectralModel.lambda_
      ~ExpCutoffPowerLawSpectralModel.parameters
      ~ExpCutoffPowerLawSpectralModel.reference
      ~ExpCutoffPowerLawSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpCutoffPowerLawSpectralModel.__call__
      ~ExpCutoffPowerLawSpectralModel.copy
      ~ExpCutoffPowerLawSpectralModel.create
      ~ExpCutoffPowerLawSpectralModel.energy_flux
      ~ExpCutoffPowerLawSpectralModel.energy_flux_error
      ~ExpCutoffPowerLawSpectralModel.evaluate
      ~ExpCutoffPowerLawSpectralModel.evaluate_error
      ~ExpCutoffPowerLawSpectralModel.from_dict
      ~ExpCutoffPowerLawSpectralModel.integral
      ~ExpCutoffPowerLawSpectralModel.integral_error
      ~ExpCutoffPowerLawSpectralModel.inverse
      ~ExpCutoffPowerLawSpectralModel.plot
      ~ExpCutoffPowerLawSpectralModel.plot_error
      ~ExpCutoffPowerLawSpectralModel.spectral_index
      ~ExpCutoffPowerLawSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: e_peak
   .. autoattribute:: index
   .. autoattribute:: lambda_
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
