docs/0.18.1/_sources/api/gammapy.modeling.models.ExpCutoffPowerLawSpectralModel.rst.txt
ExpCutoffPowerLawSpectralModel
==============================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpCutoffPowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpCutoffPowerLawSpectralModel.alpha
      ~ExpCutoffPowerLawSpectralModel.amplitude
      ~ExpCutoffPowerLawSpectralModel.covariance
      ~ExpCutoffPowerLawSpectralModel.default_parameters
      ~ExpCutoffPowerLawSpectralModel.e_peak
      ~ExpCutoffPowerLawSpectralModel.index
      ~ExpCutoffPowerLawSpectralModel.is_norm_spectral_model
      ~ExpCutoffPowerLawSpectralModel.lambda_
      ~ExpCutoffPowerLawSpectralModel.parameters
      ~ExpCutoffPowerLawSpectralModel.reference
      ~ExpCutoffPowerLawSpectralModel.tag
      ~ExpCutoffPowerLawSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpCutoffPowerLawSpectralModel.__call__
      ~ExpCutoffPowerLawSpectralModel.copy
      ~ExpCutoffPowerLawSpectralModel.create
      ~ExpCutoffPowerLawSpectralModel.energy_flux
      ~ExpCutoffPowerLawSpectralModel.energy_flux_error
      ~ExpCutoffPowerLawSpectralModel.evaluate
      ~ExpCutoffPowerLawSpectralModel.evaluate_error
      ~ExpCutoffPowerLawSpectralModel.from_dict
      ~ExpCutoffPowerLawSpectralModel.from_parameters
      ~ExpCutoffPowerLawSpectralModel.integral
      ~ExpCutoffPowerLawSpectralModel.integral_error
      ~ExpCutoffPowerLawSpectralModel.inverse
      ~ExpCutoffPowerLawSpectralModel.plot
      ~ExpCutoffPowerLawSpectralModel.plot_error
      ~ExpCutoffPowerLawSpectralModel.spectral_index
      ~ExpCutoffPowerLawSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e_peak
   .. autoattribute:: index
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: lambda_
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
